Mon Dec 31 22:13:00 GMT 2007  Colin Watson  <cjwatson@debian.org>

	* docs/HACKING (Coding style): Expand.

Mon Dec 31 22:01:35 GMT 2007  Colin Watson  <cjwatson@debian.org>

	* include/manconfig.h.in: Remove obsolete definitions of VERSION and
	  DATE and declaration of ver.
	* src/zsoelim.l: Remove obsolete definition of STATIC_VER.

Mon Dec 31 17:00:19 GMT 2007  Colin Watson  <cjwatson@debian.org>

	* lib/hashtable.c (hash_lookup_structure): New function; same as
	  previous hash_lookup but returns a struct nlist * rather than the
	  value.
	  (hash_lookup): Rewrite in terms of hash_lookup_structure.
	  (hash_install): Use hash_lookup_structure rather than hash_lookup
	  (thanks, Ivan Shmakov; should fix Debian bug #374708).

Mon Dec 31 16:15:26 GMT 2007  Colin Watson  <cjwatson@debian.org>

	* lib/hashtable.c (hash_install): Fix head comment to match reality
	  (thanks, Ivan Shmakov).

Mon Dec 31 15:45:31 GMT 2007  Colin Watson  <cjwatson@debian.org>

	* docs/HACKING (Revision control): Mention that the bzr archive now
	  requires bzr 0.15 or later.

Mon Dec 31 15:31:08 GMT 2007  Colin Watson  <cjwatson@debian.org>

	* Version: 2.5.1-pre1.
	* po/man-db.pot, po/*.po: Update.

Mon Dec 31 10:02:28 GMT 2007  Colin Watson  <cjwatson@debian.org>

	* lib/pipeline.c (passthrough): New helper function.
	  (pipeline_connect): Add special (kludge) handling for zero-command
	  sinks.
	  (pipeline_pump): Add minor commentary.
	* src/man.c (options, parse_opt): New -R/--recode option.
	  (make_roff_command): If --recode is used, suppress external
	  formatters and all processing filters, and force the output
	  encoding to the argument to --recode.
	  (display): If --recode is used, force display to stdout and
	  suppress cat pages.
	  (try_section, display_filesystem, display_database): Don't show
	  cat pages or follow .so links for --recode.
	* src/util.c (lang_dir): Handle relative filenames starting with
	  "man/".
	* man/man1/man.man1 (OPTIONS): Document --recode.