@@ -57,6 +57,10 @@ Major changes since man-db 2.5.0:
 	o man now accepts a --recode option to output a source manual page
 	  converted to a specified encoding.
 
+	o For compatibility with System V, man accepts -s as an alias for
+	  -S, and permits sections to be comma-separated as well as
+	  colon-separated.
+
 man-db 2.5.0 (7 October 2007)
 =============================
 
