@@ -1,3 +1,12 @@
+Tue Jan  1 12:34:10 GMT 2008  Colin Watson  <cjwatson@debian.org>
+
+	* src/man.c (options): Add -s as an alias for -S.
+	  (parse_opt): Accept it.
+	  (get_section_list): Allow the section list to be separated by
+	  commas as well as colons.
+	* man/man1/man.man1 (OPTIONS): Document -s and comma-separation.
+	* docs/NEWS: Document this.
+
 Mon Dec 31 22:13:00 GMT 2007  Colin Watson  <cjwatson@debian.org>
 
 	* docs/HACKING (Coding style): Expand.
